--- a/book.bib
+++ b/book.bib
@@ -22,3 +22,100 @@ author = "Robert Ishaq and Oded Cats",
 keywords = "Bus rapid transit, Service reliability, Transit operations",
 abstract = "Cities worldwide are looking for expanding the capacity of their public transport system while considering budget limitations. Bus Rapid Transit (BRT) systems are increasingly considered as alternatives for designing a mass public transport in mid-size cities in developed countries. While operations have been recognized as an important success factor, previous studies have focused on infrastructure design and planning principles of BRT. We study the operations of BRT related to service reliability and service utilization and derive lessons for planning and operations. The study is centered on the performance of the Matronit BRT system in Haifa, which is the first mass transit network of its kind in Israel. The inter-relation between service reliability, fleet management and service utilization are analysed. The speed and reliability improvements attained by the infrastructure and technological priority measures need to be complemented with control instruments to yield further gains for both service users and service provider."
 }
+@article{ALDEEK2017227,
+author = {Haitham Al-Deek and Adrian Sandt and Ahmad Alomari and Omar Hussain},
+title = {A technical note on evaluating the effectiveness of bus rapid transit with transit signal priority},
+journal = {Journal of Intelligent Transportation Systems},
+volume = {21},
+number = {3},
+pages = {227-238},
+year  = {2017},
+publisher = {Taylor & Francis},
+doi = {10.1080/15472450.2017.1286987},
+
+URL = { 
+        https://doi.org/10.1080/15472450.2017.1286987
+    
+},
+eprint = { 
+        https://doi.org/10.1080/15472450.2017.1286987
+    
+}
+,
+    abstract = { ABSTRACTTransit Signal Priority (TSP) and Bus Rapid Transit (BRT) are innovative Intelligent Transportation System (ITS) tools that can reduce travel times for buses. Combining TSP and BRT can significantly improve bus travel, but can negatively impact network traffic operations. Although TSP has been implemented worldwide, few previous studies holistically examined the effects of using various conditional and unconditional TSP strategies with or without a BRT system. This research simulates multiple TSP and BRT combination scenarios to understand their impact on traffic operations, including crossing street traffic. A test bed along International Drive (I-Drive) in Orlando, Florida, was chosen as the simulation area. Field data collected for this test bed, which included traffic volumes, bus travel times, and traffic signal control data, were used to develop, calibrate, and validate the simulation model. Results showed that BRT with Conditional TSP 3 minutes behind significantly improved travel times, average speed, and average total delay per vehicle for the main through movements compared with no BRT or TSP, with only minor effects on crossing street delays. BRT with Unconditional TSP resulted in significant crossing street delays, especially at major intersections with high traffic demand, indicating that this scenario is impractical for implementation. The simulation suggests that BRT and TSP will be most effective when used in areas where crossing street volumes are low. However, it is unknown how these ITS tools affect pedestrian traffic. Using optimization methods can determine the best strategy to balance transit and pedestrian traffic. }
+}
+@article{CATS2014223,
+title = "Regularity-driven bus operation: Principles, implementation and business models",
+journal = "Transport Policy",
+volume = "36",
+pages = "223 - 230",
+year = "2014",
+issn = "0967-070X",
+doi = "https://doi.org/10.1016/j.tranpol.2014.09.002",
+url = "http://www.sciencedirect.com/science/article/pii/S0967070X14001917",
+author = "Oded Cats",
+keywords = "Public transport, Operation, Reliability, Incentives, Performance, Procurement",
+abstract = "Service reliability is a key determinant of public transport performance. In the context of high-frequency urban lines, irregular service results with long waiting times, bunched vehicles, long delays, uneven passenger loads, poor capacity utilization and higher operational costs. Field experiments were conducted in Stockholm, Sweden, in order to test the feasibility and implications of a regularity-driven operation scheme designed to mitigate bus bunching and facilitated by a real-time control strategy. This paper investigates alternative service indicators and business models that could best support the long-term implementation of operation geared towards better regularity performance. A paradigm shift towards regularity-based service evidently requires the consideration of a series of measures along the service chain as it involves a paradigm shift in production planning, operations, control center and performance monitoring."
+}
+@article{CHEN2012,
+author = {Chen, Weiya and Yang, Chunhua and Feng, Fenling and Chen, Zhiya},
+year = {2012},
+month = {12},
+pages = {},
+title = {An Improved Model for Headway-Based Bus Service Unreliability Prevention with Vehicle Load Capacity Constraint at Bus Stops},
+volume = {2012},
+journal = {Discrete Dynamics in Nature and Society},
+doi = {10.1155/2012/313518},
+abstract = "This paper presents an improved model for improving headway-based bus route service reliability at bus stops using real-time preventive operation control, taking into account dynamic interaction among random passenger demand, stochastic driving conditions of route segments, and vehicle load capacity constraint. In this model, the real-time information of passenger demand and vehicle operation is involved to predict the imminent unacceptable headway deviation, in the case of which some in-time preventive control strategies are deployed according to the given control rules. As a case study, a single fixed bus route with high-frequency services was simulated and different scenarios of real-time preventive operation control were performed. Headway adherence and average passenger wait time were used to measure bus service reliability. The results show that the improved model is closer to the real bus route service, and using real-time information to predict potential service unreliability and trigger in-time preventive control can reduce bus bunching and avoid big gap."
+}
+@article{DELGADO201528,
+author = {Delgado, Felipe and Muñoz, Juan and Giesen, Ricardo and Wilson, Nigel},
+year = {2015},
+month = {11},
+pages = {28-38},
+title = {Integrated Real-Time Transit Signal Priority Control for High-Frequency Segregated Transit Services},
+volume = {2533},
+journal = {Transportation Research Record: Journal of the Transportation Research Board},
+doi = {10.3141/2533-04},
+abstract = "Bus bunching affects transit operations by increasing passenger waiting time and variability. To tackle this phenomenon, a wide range of control strategies has been proposed. However, none of them have considered station and interstation control together. In this study station and interstation control were tackled to determine the optimal vehicle control strategy for various stops and traffic lights in a single service transit corridor. The strategy minimized the total time that users must devote to making a trip, taking into account delays for transit and general traffic users. Based on a high-frequency, capacity-constrained, and unscheduled service (no timetable) for which real-time information about bus position (GPS) and bus load (automated passenger counter) is available, this study focused on strategies for traffic signal priority in the form of green extension considered together with holding buses at stops and limiting passenger boarding at stops. The decisions on transit signal priority were made according to a rolling horizon scheme in which effects over the whole corridor were considered in every single decision. The proposed strategy was evaluated in a simulated environment under different operational conditions. Results showed that the proposed control strategy achieves reductions in the excess delay for transit users close to 61.4% compared with no control, while general traffic increases only by 1.5%."
+}
+@article{Liu2018,
+author = {Liu, Xiaoyue Cathy and Zlatkovic, Milan and Porter, Richard J. and Fayyaz, Kiavash, and Yu, Song},
+year = {2018},
+month = {6},
+title = {Improving Efficiency and Reliability of Bus Rapid Transit},
+abstract = "In recent years, Bus Rapid Transit (BRT) systems have been gaining increasing popularity because of their effectiveness in improving urban mobility. The Utah Transit Authority (UTA) is the primary public transit provider in Salt Lake City and has implemented a 10.8-mile BRT route along 3500/3300 South in Salt Lake City. A total of 106 miles of BRT lines are planned throughout Utah, to be implemented by 2030, in an effort to alleviate congestion and increase ridership along major corridors. This research aims to utilize a modeling and simulation approach to help improve the efficiency and reliability of the high-capacity service, which makes BRT an appealing system for potential riders. First, a microscopic simulation is created to test a series of GPS-based transit signal priority (TSP) scenarios and evaluate their impact on transit and traffic operations. Second, a data-driven optimization method is implemented to understand the contributing factors of BRT dwell time and the benefits of an off-board fare collection system."
+}
+@article{NI20201,
+author = { Ying-Chuan   Ni  and  Hsien-Hao   Lo  and  Yu-Ting   Hsu  and  Hung-Jen   Huang },
+title = {Exploring the effects of passive transit signal priority design on bus rapid transit operation: a microsimulation-based optimization approach},
+journal = {Transportation Letters},
+volume = {0},
+number = {0},
+pages = {1-14},
+year  = {2020},
+publisher = {Taylor & Francis},
+doi = {10.1080/19427867.2020.1805681},
+
+URL = { 
+        https://doi.org/10.1080/19427867.2020.1805681
+    
+},
+eprint = { 
+        https://doi.org/10.1080/19427867.2020.1805681
+    
+}
+,
+    abstract = { ABSTRACT The Bus Rapid Transit (BRT) system can be a cost-effective alternative to foster public transportation. However, the delay in signalized intersections is critical to the stable progression of BRT operation. Transit Signal Priority (TSP) control has been studied to enhance the BRT operation. Nevertheless, the implementation of TSP may also impact general traffic and induce objection from the public. Upon this challenging aspect, this study focuses on passive TSP control for the BRT system. A microsimulation-based optimization model is developed to coordinate signal offsets along the arterial of BRT operation, seeking to minimize the delay of BRT vehicles without severely affecting the service level for other traffic. We conduct a case study over the Taichung BRT System in Taiwan; it indicates that the passive TSP control can reduce approximately 22\% of transit delay while containing moderate impact on other traffic. In addition, the derived control strategies can increase system capacity with satisfactory service reliability. }
+}
+@article{YANG20151,
+author = {Yang, Min Yang and Sun, Gang and Wang, Wei and Sun, Xin and Ding, Jian and Han, Jing},
+year = {2015},
+month = {01},
+pages = {1-11},
+title = {Evaluation of the pre-detective signal priority for bus rapid transit: coordinating the primary and secondary intersections},
+volume = {33},
+journal = {Transport},
+doi = {10.3846/16484142.2015.1004556},
+abstract = "Since the traditional transit priority strategy can only adjust signal timing in a limited range and is not suitable for all kinds of signal timing designs, it cannot provide enough priority for Bus Rapid Transit (BRT). In addition, traditional transit priority strategy has caused serious interferences with other traffic. This study proposes a pre-detective signal priority strategy for BRT with coordination between primary and secondary intersections. By pre-detecting, the time buses arrive at the primary intersection, the signal timing of both the primary and secondary intersections, along with the offsets, are adjusted simultaneously, based on the common length and the green ratio of each phase. In this method, the signal cycle constraints are clarified, and the bus control coordination between intersections has been taken into consideration. In this paper, one direction traffic is taken as a study example to testify the effectiveness of this method. The study uses the data collected from Changzhou, China, and a microscopic traffic simulation software PTV VISSIM with four simulation scenarios defined: no signal priority, traditional signal priority, pre-detective signal priority and pre-detective signal priority with coordination. This paper selects a set of indicators to evaluate the traffic operation for both public transit and private traffic. Results show that pre-detective signal priority with coordination is the most effective, with the total bus intersection delay decreases by 67.4% and the bus headway adherence declines by approximately 40% at all the primary and secondary stations of BRT line 1. Moreover, the negative effects that could happen with providing signal priority for BRT, such as increasing the delay and length of queue of private traffic at the intersections, are significantly reduced."
+}
